--- a/Seranet.Api/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/Seranet.Api/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -18,12 +18,25 @@
 }
 <table class="help-page-table">
     <thead>
-        <tr><th>API</th><th>Description</th></tr>
+        <tr><th>Access API</th><th>API Usage</th><th>Description</th></tr>
     </thead>
     <tbody>
     @foreach (var api in Model)
     {
         <tr>
+
+            <td class="api-name">
+                @if ("GET".Equals(@api.HttpMethod.Method)) 
+                { 
+                <a href="../@api.RelativePath">@api.RelativePath</a>
+                }
+                else
+                {
+                    <a href="@Url.Action("Api", "Help", new { apiId = api.GetFriendlyId() })">@api.HttpMethod.Method @api.RelativePath</a>
+                }
+                
+            
+            </td>
             <td class="api-name"><a href="@Url.Action("Api", "Help", new { apiId = api.GetFriendlyId() })">@api.HttpMethod.Method @api.RelativePath</a></td>
             <td class="api-documentation">
             @if (api.Documentation != null)
