cleanup and path fix

--- a/Seranet.Api/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/Seranet.Api/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -28,7 +28,7 @@
             <td class="api-name">
                 @if ("GET".Equals(@api.HttpMethod.Method)) 
                 { 
-                <a href="../@api.RelativePath">@api.RelativePath</a>
+                <a href="@api.RelativePath">@api.RelativePath</a>
                 }
                 else
                 {
