--- a/Seranet.Api/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/Seranet.Api/Areas/HelpPage/Views/Help/Index.cshtml
@@ -6,7 +6,7 @@
 @model Collection<ApiDescription>
 
 @{
-    ViewBag.Title = "ASP.NET Web API Help Page";
+    ViewBag.Title = "Seranet Service APIs";
 
     // Group APIs by controller
     ILookup<HttpControllerDescriptor, ApiDescription> apiGroups = Model.ToLookup(api => api.ActionDescriptor.ControllerDescriptor);
@@ -24,7 +24,8 @@
         <div class="content-wrapper">
             <h2>Introduction</h2>
             <p>
-                Provide a general description of your APIs here.
+                You can see the existing set of APIs below. For GET actions you can directly click the 'Access API' link below
+                to access the real data extracted from the live 99X Technology systems.
             </p>
         </div>
     </section>
