link path corrections

--- a/Seranet.Api/Views/Home/Index.cshtml
+++ b/Seranet.Api/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
         Seranet Service API is the platform for creating service APIs exposing programable interfaces
         for corporate IT systems.
     </p>    
-    <p><a href="./Help" class="btn btn-primary btn-large">See Existing APIs &raquo;</a></p>
+    <p><a href="@Url.Action("Index", "Help")" class="btn btn-primary btn-large">See Existing APIs &raquo;</a></p>
 </div>
 <div class="row">
     <div class="col-md-6">
