--- a/Seranet.Api/Views/Home/Index.cshtml
+++ b/Seranet.Api/Views/Home/Index.cshtml
@@ -9,19 +9,20 @@
 <div class="row">
     <div class="col-md-6">
         <h2>Create New APIs</h2>
-        <p>Writing new Seranet APIs are quite straight forward. The codebase is hosted on <a href="https://github.com/ectechno/seranet.api"> github </a>
-        for you to fork on to your own GitHub account. Once cloned, you should be able to run Seranet.Api MVC5 project through VS2013 do modifications to existing APIs. 
+        <p>Writing new Seranet APIs is fairly straight forward. The codebase is hosted on <a href="https://github.com/ectechno/seranet.api"> github </a>
+        for you to fork on to your own GitHub account. Once locally cloned, you should be able to run Seranet.Api MVC5 project through VS2013 and do modifications to existing APIs. 
         </p>
-        <p>To create new APIs, add a new Code Library project to the solution having nuget dependency to 'Microsoft.AspNet.WebApi.Core' package. Next add your new
-        project as a dependency to Seranet.Api host project. Now you are ready to add WebApi controllers to your project. These controllers will be
+        <p>To create new APIs, add a new Code Library project to the solution having nuget dependency to 'Microsoft.AspNet.WebApi.Core'. Next add your new
+        project as a dependency to Seranet.Api host project. Now you are ready to add your WebApi controllers to your project. These controllers will be
         automatically pickedup and be deployed by the Seranet.Api host project.</p>
 
-        <p>Once development is complete send your work as a 'Pull Request' to the original 'ectechno' repository.</p>
+        <p>Once development is complete send your work as a 'Pull Request' to the original 'ectechno' repository.
+         Someone will soon attend and deploy that to production :) !!!</p>
         <p><a class="btn btn-default" href="https://github.com/ectechno/seranet.api">Fork me &raquo;</a></p>
     </div>
     <div class="col-md-6">
         <h2>Using the Service APIs</h2>
-        <p>Seranet Service API is based on REST service model to let developers to easily consume across platforms. 
-        JS SPA is a common usecase for such applications. </p>
+        <p>All Seranet Service APIs are based on REST model, allowing developers to easily consume services across different platforms. 
+        JavaScript SPA is a common usecase for writing modern 99XT internal applications. </p>
     </div>
 </div>
