--- a/Seranet.Api/Views/Home/Index.cshtml
+++ b/Seranet.Api/Views/Home/Index.cshtml
@@ -25,4 +25,7 @@
         <p>All Seranet Service APIs are based on REST model, allowing developers to easily consume services across different platforms. 
         JavaScript SPA is a common usecase for writing modern 99XT internal applications. </p>
     </div>
+    <div>
+        Test
+    </div>
 </div>
