Jenkings test change

--- a/Seranet.Api/Views/Home/Index.cshtml
+++ b/Seranet.Api/Views/Home/Index.cshtml
@@ -26,6 +26,6 @@
         JavaScript SPA is a common usecase for writing modern 99XT internal applications. </p>
     </div>
     <div>
-        Test
+        Test Change
     </div>
 </div>
