Jenkings test commit

--- a/Seranet.Api/Views/Home/Index.cshtml
+++ b/Seranet.Api/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
         JavaScript SPA is a common usecase for writing modern 99XT internal applications. </p>
     </div>
     <div>
-        Test Change
-        test change 2
+      My Change
     </div>
+    
 </div>
